# rest-framework-tutorial

./: .azure-deploy.yml  .azure-pipelines.yml  .gitignore  Pipfile  Procfile  README.md  app.json  env-example  manage.py  pyproject.toml  requirements.txt  restore.sh  snippets  tutorial
.github/: dependabot.yml
.github/workflows/: ci.yml
1-serialization/snippets/: serializers.py
1-serialization/snippets/migrations/: 0001_initial.py
1-serialization/tutorial/: settings.py  urls.py
7-schemas-and-client-libraries/snippets/: urls.py
7-schemas-and-client-libraries/snippets/fixtures/: users.json
7-schemas-and-client-libraries/snippets/migrations/: 0001_initial.py
7-schemas-and-client-libraries/tutorial/: urls.py
docs/azure/: 1-vscode.md  2-appservice.md  3-pipelines.md  4-functions.md
snippets/: admin.py  apps.py  models.py  permissions.py  renderers.py  resources.py  serializers.py  tests.py  urls.py  views.py
snippets/fixtures/: initial_data.json  snippets.json  users.json
snippets/management/commands/: cleanup.py
snippets/migrations/: 0001_initial.py
tutorial/: asgi.py  azure.py  settings.py  urls.py  wsgi.py
